Removed the sbpl_collision_interface...it's not needed anymore. Still need to move test files to own package

--- a/sbpl_collision_checking/config/pr2_right_arm_model.yaml
+++ b/sbpl_collision_checking/config/pr2_right_arm_model.yaml
@@ -11,7 +11,7 @@ collision_groups:
       r_wrist_roll_joint
     redundancy:
       name: r_upper_arm_roll_joint
-    root_name: base_footprint
+    root_name: torso_lift_link
     tip_name: r_wrist_roll_link
     collision_links:
     - name: shoulder
