--- a/sbpl_collision_checking/config/pr2_right_arm_model.yaml
+++ b/sbpl_collision_checking/config/pr2_right_arm_model.yaml
@@ -1,17 +1,51 @@
+
 collision_groups:
 
+  - name: body
+    type: voxels
+    root_name: base_footprint
+    tip_name: head_pan_link
+    collision_links:
+    - name: head_tilt
+      root: head_tilt_link
+    - name: head_pan
+      root: head_pan_link
+    - name: head_mount
+      root: head_mount_link
+#    - name: laser
+#      root: laser_tilt_link
+    - name: laser_mount
+      root: laser_tilt_mount_link
+    - name: torso
+      root: torso_lift_link
+    - name: base
+      root: base_link
+
+  - name: left_arm
+    type: voxels
+    root_name: base_footprint
+    tip_name: l_wrist_roll_link
+    collision_links:
+    - name: shoulder
+      root: l_shoulder_pan_link
+    - name: upper_arm
+      root: l_upper_arm_link
+    - name: forearm
+      root: l_forearm_link
+    - name: gripper
+      root: l_gripper_palm_link
+    - name: left_finger
+      root: l_gripper_l_finger_link
+    - name: right_finger
+      root: l_gripper_r_finger_link
+    - name: right_finger_tip
+      root: l_gripper_r_finger_tip_link
+    - name: left_finger_tip
+      root: l_gripper_l_finger_tip_link
+
   - name: right_arm
-    planning_joints:
-      r_shoulder_pan_joint
-      r_shoulder_lift_joint
-      r_upper_arm_roll_joint
-      r_elbow_flex_joint
-      r_forearm_roll_joint
-      r_wrist_flex_joint
-      r_wrist_roll_joint
-    redundancy:
-      name: r_upper_arm_roll_joint
-    root_name: torso_lift_link
+    type: spheres
+    root_name: base_footprint #torso_lift_link
     tip_name: r_wrist_roll_link
     collision_links:
     - name: shoulder
@@ -39,8 +73,11 @@ collision_groups:
       root: r_gripper_l_finger_tip_link
       spheres: lft0 lft1
 
+# With old model
+#sh0: {x: 0.09, y: 0.0, z: -0.02, radius: 0.18, priority: 5}
 
-sh0: {x: 0.09, y: 0.0, z: 0.00, radius: 0.18, priority: 5}
+# With new collision links
+sh0: {x: 0.13, y: 0.0, z: -0.04, radius: 0.16, priority: 5}
 
 ua0: {x: 0.18, y: 0.0, z: -0.015, radius: 0.11, priority: 4}
 ua1: {x: 0.26, y: 0.00, z: -0.035, radius: 0.08, priority: 4}
@@ -54,13 +91,6 @@ fa3: {x: 0.265, y: 0.0275, z: -0.015, radius: 0.05, priority: 3}
 fa4: {x: 0.265, y: -0.0275, z: -0.015, radius: 0.05, priority: 3}
 fa5: {x: 0.32, y: 0.0225, z: -0.005, radius: 0.05, priority: 3}
 fa6: {x: 0.32, y: -0.0225, z: -0.005, radius: 0.05, priority: 3}
-
-#fa0: {x: 0.12, y: 0.0, z: 0.01, radius: 0.07, priority: 2}
-#fa1: {x: 0.19, y: 0.0, z: -0.01, radius: 0.06, priority: 3}
-#fa2: {x: 0.25, y: 0.0, z: -0.01, radius: 0.06, priority: 3}
-#fa3: {x: 0.32, y: 0.0, z: -0.01, radius: 0.06, priority: 3}
-#fa4: {x: 0.34, y: 0.04, z: 0.01, radius: 0.03, priority: 3}
-#fa5: {x: 0.34, y: -0.04, z: 0.01, radius: 0.03, priority: 3}
 
 gr0: {x: 0.0725, y: -0.0175, z: 0.00, radius: 0.04, priority: 2}
 gr1: {x: 0.0725, y: 0.0175, z: 0.00, radius: 0.04, priority: 2}
