Added support to the sbpl_collision_space for working in a non-kinematics world frame like the map frame.

--- a/sbpl_collision_checking/config/pr2_right_arm_model.yaml
+++ b/sbpl_collision_checking/config/pr2_right_arm_model.yaml
@@ -23,7 +23,7 @@ collision_groups:
 
   - name: left_arm
     type: voxels
-    root_name: base_footprint
+    root_name: torso_lift_link
     tip_name: l_wrist_roll_link
     collision_links:
     - name: shoulder
