--- a/sbpl_collision_checking/config/pr2_left_arm_model.yaml
+++ b/sbpl_collision_checking/config/pr2_left_arm_model.yaml
@@ -1,4 +1,44 @@
-groups:
+collision_groups:
+
+  - name: body
+    type: voxels
+    root_name: base_footprint
+    tip_name: head_pan_link
+    collision_links:
+    - name: head_tilt
+      root: head_tilt_link
+    - name: head_pan
+      root: head_pan_link
+    - name: head_mount
+      root: head_mount_link
+    - name: laser_mount
+      root: laser_tilt_mount_link
+    - name: torso
+      root: torso_lift_link
+    - name: base
+      root: base_link
+
+  - name: right_arm
+    type: voxels
+    root_name: torso_lift_link
+    tip_name: r_wrist_roll_link
+    collision_links:
+    - name: shoulder
+      root: r_shoulder_pan_link
+    - name: upper_arm
+      root: r_upper_arm_link
+    - name: forearm
+      root: r_forearm_link
+    - name: gripper
+      root: r_gripper_palm_link
+    - name: left_finger
+      root: r_gripper_l_finger_link
+    - name: right_finger
+      root: r_gripper_r_finger_link
+    - name: right_finger_tip
+      root: r_gripper_r_finger_tip_link
+    - name: left_finger_tip
+      root: r_gripper_l_finger_tip_link
 
   - name: left_arm
     joints:
@@ -36,34 +76,36 @@ groups:
       spheres: lft0 lft1
 
 
-sh0: {x: 0.09, y: 0.0, z: 0.00, radius: 0.16, priority: 5}
+collision_spheres:
 
-ua0: {x: 0.18, y: 0.0, z: 0.00, radius: 0.09, priority: 4}
-ua1: {x: 0.26, y: 0.00, z: -0.035, radius: 0.07, priority: 4}
-ua2: {x: 0.32, y: 0.00, z: -0.035, radius: 0.07, priority: 4}
-ua3: {x: 0.40, y: 0.0, z: 0.01, radius: 0.10, priority: 1}
+  - {name: sh0, x: 0.09, y: 0.0, z: 0.00, radius: 0.16, priority: 5}
 
-fa0: {x: 0.13, y: 0.0, z: 0.01, radius: 0.07, priority: 2}
-fa1: {x: 0.19, y: 0.03, z: -0.01, radius: 0.05, priority: 3}
-fa2: {x: 0.19, y: -0.03, z: -0.01, radius: 0.05, priority: 3}
-fa3: {x: 0.25, y: 0.03, z: -0.01, radius: 0.05, priority: 3}
-fa4: {x: 0.25, y: -0.03, z: -0.01, radius: 0.05, priority: 3}
-fa5: {x: 0.32, y: 0.03, z: 0.0, radius: 0.05, priority: 3}
-fa6: {x: 0.32, y: -0.03, z: 0.0, radius: 0.05, priority: 3}
+  - {name: ua0, x: 0.18, y: 0.0, z: 0.00, radius: 0.09, priority: 4}
+  - {name: ua1, x: 0.26, y: 0.00, z: -0.035, radius: 0.07, priority: 4}
+  - {name: ua2, x: 0.32, y: 0.00, z: -0.035, radius: 0.07, priority: 4}
+  - {name: ua3, x: 0.40, y: 0.0, z: 0.01, radius: 0.10, priority: 1}
 
-gr0: {x: 0.08, y: -0.02, z: 0.00, radius: 0.04, priority: 2}
-gr1: {x: 0.08, y: 0.02, z: 0.00, radius: 0.04, priority: 2}
-gr2: {x: 0.09, y: 0.0, z: 0.00, radius: 0.04, priority: 2}
+  - {name: fa0, x: 0.13, y: 0.0, z: 0.01, radius: 0.07, priority: 2}
+  - {name: fa1, x: 0.19, y: 0.03, z: -0.01, radius: 0.05, priority: 3}
+  - {name: fa2, x: 0.19, y: -0.03, z: -0.01, radius: 0.05, priority: 3}
+  - {name: fa3, x: 0.25, y: 0.03, z: -0.01, radius: 0.05, priority: 3}
+  - {name: fa4, x: 0.25, y: -0.03, z: -0.01, radius: 0.05, priority: 3}
+  - {name: fa5, x: 0.32, y: 0.03, z: 0.0, radius: 0.05, priority: 3}
+  - {name: fa6, x: 0.32, y: -0.03, z: 0.0, radius: 0.05, priority: 3}
 
-lf0: {x: 0.04, y: 0.03, z: 0.00, radius: 0.04, priority: 1}
-lf1: {x: 0.08, y: 0.0175, z: 0.00, radius: 0.035, priority: 1}
+  - {name: gr0, x: 0.08, y: -0.02, z: 0.00, radius: 0.04, priority: 2}
+  - {name: gr1, x: 0.08, y: 0.02, z: 0.00, radius: 0.04, priority: 2}
+  - {name: gr2, x: 0.09, y: 0.0, z: 0.00, radius: 0.04, priority: 2}
 
-rf0: {x: 0.04, y: -0.03, z: 0.00, radius: 0.04, priority: 1}
-rf1: {x: 0.08, y: -0.0175, z: 0.00, radius: 0.035, priority: 1}
+  - {name: lf0, x: 0.04, y: 0.03, z: 0.00, radius: 0.04, priority: 1}
+  - {name: lf1, x: 0.08, y: 0.0175, z: 0.00, radius: 0.035, priority: 1}
 
-rft0: {x: 0.015, y: 0.005, z: 0.00, radius: 0.03, priority: 1}
-rft1: {x: 0.035, y: 0.005, z: 0.00, radius: 0.02, priority: 1}
+  - {name: rf0, x: 0.04, y: -0.03, z: 0.00, radius: 0.04, priority: 1}
+  - {name: rf1, x: 0.08, y: -0.0175, z: 0.00, radius: 0.035, priority: 1}
 
-lft0: {x: 0.015, y: -0.005, z: 0.00, radius: 0.03, priority: 1}
-lft1: {x: 0.035, y: -0.005, z: 0.00, radius: 0.02, priority: 1}
+  - {name: rft0, x: 0.015, y: 0.005, z: 0.00, radius: 0.03, priority: 1}
+  - {name: rft1, x: 0.035, y: 0.005, z: 0.00, radius: 0.02, priority: 1}
+
+  - {name: lft0, x: 0.015, y: -0.005, z: 0.00, radius: 0.03, priority: 1}
+  - {name: lft1, x: 0.035, y: -0.005, z: 0.00, radius: 0.02, priority: 1}
 
