Improving the test files in the collision checker to be generic. Added launch files to include the params for the different arms.

--- a/sbpl_collision_checking/CMakeLists.txt
+++ b/sbpl_collision_checking/CMakeLists.txt
@@ -44,5 +44,5 @@ target_link_libraries(sbpl_collision_checking
 #rosbuild_add_executable(test_model src/test_collision_model.cpp)
 #target_link_libraries(test_model sbpl_collision_checking)
 
-#rosbuild_add_executable(test_space src/test_collision_space.cpp)
-#target_link_libraries(test_space sbpl_collision_checking)
+rosbuild_add_executable(test_space src/test_collision_space.cpp)
+target_link_libraries(test_space sbpl_collision_checking)
