Changed the root_links of the pr2 arm groups to be base_footprint. It makes much more sense that way. Maybe we should just have one root link for all of the groups?

--- a/sbpl_collision_checking/config/pr2_left_arm_model.yaml
+++ b/sbpl_collision_checking/config/pr2_left_arm_model.yaml
@@ -20,7 +20,7 @@ collision_groups:
 
   - name: right_arm
     type: voxels
-    root_name: torso_lift_link
+    root_name: base_footprint
     tip_name: r_wrist_roll_link
     collision_links:
     - name: shoulder
@@ -42,7 +42,7 @@ collision_groups:
 
   - name: left_arm
     type: spheres
-    root_name: torso_lift_link
+    root_name: base_footprint
     tip_name: l_wrist_roll_link
     collision_links:
     - name: shoulder
