--- a/sbpl_collision_checking/config/pr2_right_arm_model.yaml
+++ b/sbpl_collision_checking/config/pr2_right_arm_model.yaml
@@ -9,10 +9,6 @@ collision_groups:
       root: head_tilt_link
     - name: head_pan
       root: head_pan_link
-#    - name: head_mount
-#      root: head_mount_link
-#    - name: laser
-#      root: laser_tilt_link
     - name: laser_mount
       root: laser_tilt_mount_link
     - name: torso
@@ -20,27 +16,27 @@ collision_groups:
     - name: base
       root: base_link
 
-  - name: left_arm
-    type: voxels
-    root_name: base_footprint
-    tip_name: l_wrist_roll_link
-    collision_links:
-    - name: shoulder
-      root: l_shoulder_pan_link
-    - name: upper_arm
-      root: l_upper_arm_link
-    - name: forearm
-      root: l_forearm_link
-    - name: gripper
-      root: l_gripper_palm_link
-    - name: left_finger
-      root: l_gripper_l_finger_link
-    - name: right_finger
-      root: l_gripper_r_finger_link
-    - name: right_finger_tip
-      root: l_gripper_r_finger_tip_link
-    - name: left_finger_tip
-      root: l_gripper_l_finger_tip_link
+#  - name: left_arm
+#    type: voxels
+#    root_name: base_footprint
+#    tip_name: l_wrist_roll_link
+#    collision_links:
+#    - name: shoulder
+#      root: l_shoulder_pan_link
+#    - name: upper_arm
+#      root: l_upper_arm_link
+#    - name: forearm
+#      root: l_forearm_link
+#    - name: gripper
+#      root: l_gripper_palm_link
+#    - name: left_finger
+#      root: l_gripper_l_finger_link
+#    - name: right_finger
+#      root: l_gripper_r_finger_link
+#    - name: right_finger_tip
+#      root: l_gripper_r_finger_tip_link
+#    - name: left_finger_tip
+#      root: l_gripper_l_finger_tip_link
 
   - name: right_arm
     type: spheres
@@ -50,15 +46,19 @@ collision_groups:
     - name: shoulder
       root: r_shoulder_pan_link
       spheres: sh0
+      low_res_spheres: lr_sh0
     - name: upper_arm
       root: r_upper_arm_roll_link
       spheres: ua0 ua1 ua2 ua3
+      low_res_spheres: lr_ua0 lr_ua1 lr_ua2
     - name: forearm
       root: r_forearm_roll_link
       spheres: fa0 fa1 fa2 fa3 fa4 fa5 fa6
+      low_res_spheres: lr_fa0 lr_fa1 #lr_fa2
     - name: gripper
       root: r_wrist_roll_link
       spheres: gr0 gr1 gr2
+      low_res_spheres: lr_gr0 lr_gr1
     - name: left_finger
       root: r_gripper_l_finger_link
       spheres: lf0 lf1
@@ -72,10 +72,43 @@ collision_groups:
       root: r_gripper_l_finger_tip_link
       spheres: lft0 lft1
 
-collision_spheres:
+  - name: left_arm
+    type: spheres
+    root_name: base_footprint
+    tip_name: l_wrist_roll_link
+    collision_links:
+    - name: shoulder
+      root: l_shoulder_pan_link
+      spheres: sh0
+      low_res_spheres: lr_sh0
+    - name: upper_arm
+      root: l_upper_arm_roll_link
+      spheres: ua0 ua1 ua2 ua3
+      low_res_spheres: lr_ua0 lr_ua1 lr_ua2
+    - name: forearm
+      root: l_forearm_roll_link
+      spheres: fa0 fa1 fa2 fa3 fa4 fa5 fa6
+      low_res_spheres: lr_fa0 lr_fa1 #lr_fa2
+    - name: gripper
+      root: l_wrist_roll_link
+      spheres: gr0 gr1 gr2
+      low_res_spheres: lr_gr0 lr_gr1
+    - name: left_finger
+      root: l_gripper_l_finger_link
+      spheres: lf0 lf1
+    - name: right_finger
+      root: l_gripper_r_finger_link
+      spheres: rf0 rf1
+    - name: right_finger_tip
+      root: l_gripper_r_finger_tip_link
+      spheres: rft0 rft1
+    - name: left_finger_tip
+      root: l_gripper_l_finger_tip_link
+      spheres: lft0 lft1
 
-# - {name: sh0, x: 0.09, y: 0.0, z: -0.02, radius: 0.18, priority: 5}
-  - {name: sh0, x: 0.13, y: 0.0, z: -0.04, radius: 0.16, priority: 5}
+collision_spheres:
+    # Radius of sh0 should really be 0.16
+  - {name: sh0, x: 0.13, y: 0.0, z: -0.04, radius: 0.15, priority: 5}
 
   - {name: ua0, x: 0.18, y: 0.0, z: -0.015, radius: 0.11, priority: 4}
   - {name: ua1, x: 0.26, y: 0.00, z: -0.035, radius: 0.08, priority: 4}
@@ -106,3 +139,16 @@ collision_spheres:
   - {name: lft0, x: 0.015, y: -0.005, z: 0.00, radius: 0.03, priority: 1}
   - {name: lft1, x: 0.035, y: -0.005, z: 0.00, radius: 0.02, priority: 1}
 
+# low-res
+  - {name: lr_sh0, x: 0.13, y: 0.0, z: -0.04, radius: 0.15, priority: 5}
+
+  - {name: lr_ua0, x: 0.18, y: 0.0, z: -0.015, radius: 0.11, priority: 4}
+  - {name: lr_ua1, x: 0.30, y: 0.00, z: -0.035, radius: 0.11, priority: 4}
+  - {name: lr_ua2, x: 0.40, y: 0.0, z: -0.0, radius: 0.105, priority: 2}
+
+  - {name: lr_fa0, x: 0.13, y: 0.0, z: -0.005, radius: 0.1, priority: 2}
+  - {name: lr_fa1, x: 0.28, y: 0.0, z: -0.01, radius: 0.1, priority: 3}
+
+  - {name: lr_gr0, x: 0.06, y: 0.0, z: 0.00, radius: 0.08, priority: 5}
+  - {name: lr_gr1, x: 0.14, y: 0.0, z: 0.00, radius: 0.08, priority: 5}
+    
