--- a/sbpl_collision_checking/config/pr2_right_arm_model.yaml
+++ b/sbpl_collision_checking/config/pr2_right_arm_model.yaml
@@ -88,7 +88,7 @@ collision_groups:
     - name: forearm
       root: l_forearm_roll_link
       spheres: fa0 fa1 fa2 fa3 fa4 fa5 fa6
-      low_res_spheres: lr_fa0 lr_fa1 #lr_fa2
+      low_res_spheres: lr_fa0 lr_fa1
     - name: gripper
       root: l_wrist_roll_link
       spheres: gr0 gr1 gr2
@@ -140,15 +140,15 @@ collision_spheres:
   - {name: lft1, x: 0.035, y: -0.005, z: 0.00, radius: 0.02, priority: 1}
 
 # low-res
-  - {name: lr_sh0, x: 0.15, y: 0.0, z: -0.03, radius: 0.15, priority: 5}
+  - {name: lr_sh0, x: 0.14, y: 0.0, z: -0.03, radius: 0.17, priority: 5}
 
-  - {name: lr_ua0, x: 0.18, y: 0.0, z: -0.015, radius: 0.11, priority: 4}
-  - {name: lr_ua1, x: 0.30, y: 0.00, z: -0.035, radius: 0.11, priority: 4}
-  - {name: lr_ua2, x: 0.40, y: 0.0, z: -0.0, radius: 0.105, priority: 2}
+  - {name: lr_ua0, x: 0.18, y: 0.0, z: -0.015, radius: 0.1225, priority: 4}
+  - {name: lr_ua1, x: 0.30, y: 0.00, z: -0.035, radius: 0.1225, priority: 2}
+  - {name: lr_ua2, x: 0.40, y: 0.0, z: -0.0, radius: 0.1225, priority: 2}
 
-  - {name: lr_fa0, x: 0.135, y: 0.0, z: -0.005, radius: 0.1, priority: 2}
-  - {name: lr_fa1, x: 0.275, y: 0.0, z: -0.01, radius: 0.1, priority: 3}
+  - {name: lr_fa0, x: 0.135, y: 0.0, z: -0.005, radius: 0.12, priority: 2}
+  - {name: lr_fa1, x: 0.275, y: 0.0, z: -0.01, radius: 0.12, priority: 1}
 
-  - {name: lr_gr0, x: 0.06, y: 0.0, z: 0.00, radius: 0.08, priority: 5}
-  - {name: lr_gr1, x: 0.14, y: 0.0, z: 0.00, radius: 0.08, priority: 5}
+  - {name: lr_gr0, x: 0.06, y: 0.0, z: 0.00, radius: 0.1, priority: 1}
+  - {name: lr_gr1, x: 0.16, y: 0.0, z: 0.00, radius: 0.1, priority: 1}
     
